test/invalid/baseline/scopedname.txt
Syntax error at line 2:
  typedef gfx::geom::
             ^ Typedef lacks a name
